@@ -16,6 +16,7 @@ struct buffy
 {
 	unsigned char *data;
 	ssize_t size;
+	ssize_t realsize;
 	struct buffy *next;
 };
 
